--- a/assets/style/SlutuppgiftStyleSheet.css
+++ b/assets/style/SlutuppgiftStyleSheet.css
@@ -1,5 +1,5 @@
 body, html {
-	background-image:url("../resource/weather/weather/weather.png");
+	background-image:url("http://www.zingerbug.com/Backgrounds/background_images/small_blue_bricks_seamless_pattern.gif");
 	margin: 0px;
 	margin-top: -25px;
 }
