--- a/assets/style/Slutuppgift(recept)StyleSheet.css
+++ b/assets/style/Slutuppgift(recept)StyleSheet.css
@@ -1,5 +1,5 @@
 body {
-	background-image:url("../resource/weather/weather/weather.png");
+	background-image:url("http://www.zingerbug.com/Backgrounds/background_images/small_blue_bricks_seamless_pattern.gif");
 }
 h1 {
 	
