--- a/assets/style/SlutuppgiftStyleSheet.css
+++ b/assets/style/SlutuppgiftStyleSheet.css
@@ -1,5 +1,5 @@
 body, html {
-	background-image:url("http://www.zingerbug.com/Backgrounds/background_images/small_blue_bricks_seamless_pattern.gif");
+	background-image:url("https://c1.staticflickr.com/5/4049/4562026127_853940bc8b_o.png");
 	margin: 0px;
 	margin-top: -25px;
 }
